--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     >
                         <img
                             class="img-person"
-                            src="https://randomuser.me/api/portraits/men/57.jpg"
+                            src="https://randomuser.me/api/portraits/women/57.jpg"
                             class="rounded-circle mb-1"
                         />
                         <div class="card-body">
@@ -430,7 +430,7 @@
                     >
                         <img
                             class="img-person"
-                            src="https://randomuser.me/api/portraits/men/57.jpg"
+                            src="https://randomuser.me/api/portraits/men/11.jpg"
                             class="rounded-circle mb-1"
                         />
                         <div class="card-body">
@@ -479,7 +479,7 @@
                     >
                         <img
                             class="img-person"
-                            src="https://randomuser.me/api/portraits/men/57.jpg"
+                            src="https://randomuser.me/api/portraits/women/44.jpg"
                             class="rounded-circle mb-1"
                         />
                         <div class="card-body">
