--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             world of web development!
                         </p>
                     </div>
-                    <button class="enroll">Start The Enrollment</button>
+                    <button type="button" class="enroll" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Start The Enrollment</button>
                 </div>
                 <div class="item">
                     <img class="showcase" src="./img/showcase.svg" />
@@ -601,5 +601,39 @@
                 <div><a href="#index.html"><button  type="submit">⇑</button></a></div>
             </div>
         </footer>
+        <section>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div><h1 class="modal-title fs-5" id="exampleModalLabel">Enrollment</h1></div>
+        
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div><p class="modal-title fs-9" id="exampleModalLabel">Fill out this form and we will get back to you</p></div>
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">First Name:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Last Name:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Email:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" style="border-radius: 8px !important; height: auto;" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" style="border-radius: 8px !important; height: auto;" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
+        </section>
     </body>
 </html>
